--- a/.github/actions/gradle-cache/action.yml
+++ b/.github/actions/gradle-cache/action.yml
@@ -1,6 +1,9 @@
 name: "Caches gradle & Kotlin/Native artifacts"
 description: "Caches gradle & Kotlin/Native artifacts"
-inputs: {}
+inputs:
+  subplatform:
+    description: 'Sub Platform'
+    required: true
 runs:
   using: "composite"
   steps:
@@ -10,7 +13,7 @@ runs:
           ~/.gradle/caches
           ~/.gradle/wrapper
           ~/.konan
-        key: ${{ runner.os }}-gradle-v3-${{ hashFiles('gradle.properties', 'gradle/libs.versions.toml', 'gradle/wrapper/gradle-wrapper.properties') }}
+        key: ${{ runner.os }}-gradle-v3-${{ inputs.subplatform }}-${{ hashFiles('gradle.properties', 'gradle/libs.versions.toml', 'gradle/wrapper/gradle-wrapper.properties') }}
         restore-keys: |
           ${{ runner.os }}-gradle-v3-
     - uses: webiny/action-post-run@3.0.0
