Disable building tvOS for now

--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -225,5 +225,5 @@ jobs:
       - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
       - { name: Start gradle, run: ./gradlew }
       - { name: Run ios simulator tests, run: ./gradlew iosX64Test }
-      - { name: Check compilation of tvOS targets, run: ./gradlew publishTvosArm64PublicationToMavenLocal }
+      #- { name: Check compilation of tvOS targets, run: ./gradlew publishTvosArm64PublicationToMavenLocal }
       - { name: Archive Test Results, if: failure(), uses: actions/upload-artifact@v3, with: { name: screenshot-test-results-macos, retention-days: 21, path: "**/build/reports", if-no-files-found: ignore } }
