--- a/gradle.properties
+++ b/gradle.properties
@@ -50,6 +50,7 @@ project.license.url=https://raw.githubusercontent.com/korlibs/korge-next/master/
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.mpp.stability.nowarn=true
 kotlin.wasm.stability.nowarn=true
+org.gradle.warning.mode=none
 
 kotlin.native.ignoreIncorrectDependencies=true
 kotlin.native.ignoreDisabledTargets=true
