Fix some gradle warnings

--- a/gradle.properties
+++ b/gradle.properties
@@ -49,6 +49,8 @@ project.license.url=https://raw.githubusercontent.com/korlibs/korge-next/master/
 #kotlin.mpp.enableCInteropCommonization.nowarn=true
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.mpp.stability.nowarn=true
+kotlin.wasm.stability.nowarn=true
+org.gradle.warning.mode=none
 
 kotlin.native.ignoreIncorrectDependencies=true
 kotlin.native.ignoreDisabledTargets=true
