--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -89,6 +89,7 @@ jobs:
     steps:
     - { uses: actions/checkout@v3 }
     - { name: Configure local.properties, run: "echo org.gradle.parallel=true >> local.properties" }
+    - { name: Replace gradle wrapper, run: "sed -i '' 's/-all/-bin/g' gradle/wrapper/gradle-wrapper.properties" }
     - { name: Install freeglut3 & openal, run: sudo apt-get update && sudo apt-get -y install freeglut3-dev libopenal-dev xvfb }
     - { name: Run Xvfb in Background, run: "Xvfb :99 &" }
     - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
@@ -114,6 +115,7 @@ jobs:
       DISABLE_SANDBOX: true
     steps:
       - { uses: actions/checkout@v3 }
+      - { name: Replace gradle wrapper, run: "sed -i '' 's/-all/-bin/g' gradle/wrapper/gradle-wrapper.properties" }
       - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
       - { name: Prepare Gradle, uses: gradle/gradle-build-action@ef76a971e2fa3f867b617efd72f2fbd72cf6f8bc } # v2.8.0
       - { name: Start gradle, run: ./gradlew }
@@ -136,6 +138,7 @@ jobs:
       - uses: denoland/setup-deno@v1
         with:
           deno-version: v1.x
+      - { name: Replace gradle wrapper, run: "sed -i '' 's/-all/-bin/g' gradle/wrapper/gradle-wrapper.properties" }
       - { name: Configure local.properties, run: "echo org.gradle.parallel=false >> local.properties" }
       - { name: Download, shell: cmd, run: "curl -L -o opengl32-x64.zip https://github.com/korlibs/mesa-dist-win/releases/download/21.2.3/opengl32-x64.zip" }
       - { name: unzip, shell: cmd, run: "unzip opengl32-x64.zip" }
@@ -156,6 +159,7 @@ jobs:
       DISABLE_SANDBOX: true
     steps:
       - { uses: actions/checkout@v3 }
+      - { name: Replace gradle wrapper, run: "sed -i '' 's/-all/-bin/g' gradle/wrapper/gradle-wrapper.properties" }
       - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
       - { name: Install freeglut3 & openal, run: sudo apt-get update && sudo apt-get -y install freeglut3-dev libopenal-dev }
       - { name: Prepare Gradle, uses: gradle/gradle-build-action@ef76a971e2fa3f867b617efd72f2fbd72cf6f8bc } # v2.8.0
@@ -173,6 +177,7 @@ jobs:
       DISABLE_SANDBOX: true
     steps:
       - { uses: actions/checkout@v3 }
+      - { name: Replace gradle wrapper, run: "sed -i '' 's/-all/-bin/g' gradle/wrapper/gradle-wrapper.properties" }
       - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
       - { name: Prepare Gradle, uses: gradle/gradle-build-action@ef76a971e2fa3f867b617efd72f2fbd72cf6f8bc } # v2.8.0
       - name: Run Android Connected Tests
@@ -191,6 +196,7 @@ jobs:
       DISABLE_SANDBOX: true
     steps:
       - { uses: actions/checkout@v3 }
+      - { name: Replace gradle wrapper, run: "sed -i '' 's/-all/-bin/g' gradle/wrapper/gradle-wrapper.properties" }
       - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
       - { name: Prepare Gradle, uses: gradle/gradle-build-action@ef76a971e2fa3f867b617efd72f2fbd72cf6f8bc } # v2.8.0
       - { name: Start gradle, run: ./gradlew }
