Update TEST_SNAPSHOT to use gradle/gradle-build-action and use Kotlin 1.9.255-SNAPSHOT

--- a/.github/workflows/TEST_SNAPSHOT.yml
+++ b/.github/workflows/TEST_SNAPSHOT.yml
@@ -11,8 +11,8 @@ on:
     - cron: "0 0 * * 4"
 
 env:
-  # https://oss.sonatype.org/content/repositories/snapshots/org/jetbrains/kotlin/kotlin-compiler/1.5.255-SNAPSHOT/
-  FORCED_KOTLIN_VERSION: "1.7.255-SNAPSHOT"
+  # https://oss.sonatype.org/content/repositories/snapshots/org/jetbrains/kotlin/kotlin-compiler/
+  FORCED_KOTLIN_VERSION: "1.9.255-SNAPSHOT"
   SKIP_KORGE_SAMPLES: true
   JAVA_VERSION: 11
   JAVA_DISTRIBUTION: zulu
@@ -26,8 +26,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+    - { name: Replace gradle wrapper, run: "sed 's/-all/-bin/g' gradle/wrapper/gradle-wrapper.properties > gradle/wrapper/gradle-wrapper.properties.bak; cp gradle/wrapper/gradle-wrapper.properties.bak gradle/wrapper/gradle-wrapper.properties" }
+    - { name: Prepare Gradle, uses: gradle/gradle-build-action@ef76a971e2fa3f867b617efd72f2fbd72cf6f8bc } # v2.8.0
     - name: Start gradle
       run: ./gradlew
     - name: Testing JVM
