--- a/.github/workflows/DEPLOY.yml
+++ b/.github/workflows/DEPLOY.yml
@@ -91,7 +91,7 @@ jobs:
 
   publish-finalize:
     runs-on: ubuntu-latest
-    needs: [publish-windows, publish-mac, publish-linux, publish-ios, publish-jvm-multiplatform, publish-js-android, publish-tvos]
+    needs: [publish-ios, publish-jvm-multiplatform, publish-js-android, publish-tvos]
     env:
       stagedRepositoryId: ${{needs.create-staging-repo.outputs.stagedRepositoryId}}
       DISABLE_JAVASCRIPT_TEST: true
