--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -132,6 +132,7 @@ jobs:
       DISABLE_KOTLIN_NATIVE: true
       DISABLE_ANDROID: true
       DISABLE_SANDBOX: true
+      GRADLE_OPTS: -Dorg.gradle.daemon=false -Dkotlin.compiler.execution.strategy=in-process -Dorg.gradle.workers.max=3
     steps:
       - { uses: actions/checkout@v3 }
       - uses: denoland/setup-deno@v1
