--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,7 @@ jcodec = "0.2.5"
 junit = "4.13.2"
 proguard-gradle = "7.2.2"
 asm = "9.5"
+jgit = "5.13.1.202206130422-r"
 
 #kotlin = "1.9.0-Beta"
 #kotlin = "1.8.255-SNAPSHOT"
@@ -69,6 +70,7 @@ android-build-gradle = { module = "com.android.tools.build:gradle", version.ref 
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 gradle-publish-plugin = { module = "com.gradle.publish:plugin-publish-plugin", version.ref = "gradle-publish-plugin" }
 closure-compiler = { module = "com.google.javascript:closure-compiler", version.ref = "closure-compiler" }
+jgit = { module = "org.eclipse.jgit:org.eclipse.jgit", version.ref = "jgit" }
 
 [bundles]
 jna = ["jna-core", "jna-platform"]
