--- a/.github/workflows/DEPLOY_ONLY_GRADLE_PLUGIN.yml
+++ b/.github/workflows/DEPLOY_ONLY_GRADLE_PLUGIN.yml
@@ -42,7 +42,7 @@ jobs:
       - { name: Replace gradle wrapper, run: "sed 's/-all/-bin/g' gradle/wrapper/gradle-wrapper.properties > gradle/wrapper/gradle-wrapper.properties.bak; cp gradle/wrapper/gradle-wrapper.properties.bak gradle/wrapper/gradle-wrapper.properties" }
       - { name: Prepare Gradle, uses: gradle/gradle-build-action@ef76a971e2fa3f867b617efd72f2fbd72cf6f8bc } # v2.8.0
       - run: sudo apt-get install xvfb
-      - run: xvfb-run --auto-servernum ./gradlew --no-daemon :korge-gradle-plugin:publishJvmPublicationToMavenRepository
+      - run: xvfb-run --auto-servernum ./gradlew --no-daemon :korge-gradle-plugin:publishJvmPublicationToMavenRepository :korge-gradle-plugin-common:publishJvmPublicationToMavenRepository :korge-gradle-plugin-settings:publishJvmPublicationToMavenRepository
 
   publish-finalize:
     runs-on: ubuntu-latest
