Supports proxying and allow searching for store modules and entries

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -23,6 +23,6 @@ kramdown:
     disable : true
 sass:
   sass_dir: css
-plugins:
+#plugins:
   #- jekyll-redirect-from
   #- hook-add-last-modified-date
