--- a/docs/_data/header_sections.yml
+++ b/docs/_data/header_sections.yml
@@ -1,6 +1,9 @@
 left:
   - { title: "Docs", url: "/" }
-  - { title: "Examples", url: "/" }
+  - { title: "Blog", url: "https://blog.korge.org/" }
+  - { title: "Dokka", url: "https://dokka.korge.org/" }
 right:
   - { title: "GitHub", url: "https://github.com/korlibs/korge", icon: "bi bi-github" }
-  - { title: "Twitter", url: "https://twitter.com/KorgeGameEngine", icon: "bi bi-twitter" }
+  - { title: "Twitter", url: "https://twitter.korge.org/", icon: "bi bi-twitter" }
+  - { title: "Discord", url: "https://discord.korge.org/", icon: "bi bi-discord" }
+  - { title: "Youtube", url: "https://youtube.korge.org/", icon: "bi bi-youtube" }
