--- a/docs/_data/sections.yml
+++ b/docs/_data/sections.yml
@@ -9,6 +9,11 @@
   icon: bi bi-mortarboard
   color: red
 
+- id: targets
+  title: Targets
+  icon: bi bi-phone
+  color: orange
+
 - id: customize
   title: Customize
   icon: bi bi-palette2
@@ -43,4 +48,9 @@
   title: I/O
   icon: bi bi-file-earmark-binary-fill
   color: cyan
+
+- id: about
+  title: About
+  icon: bi bi-globe
+  color: indigo
 
