--- a/docs/_data/sections.yml
+++ b/docs/_data/sections.yml
@@ -59,6 +59,26 @@
   icon: bi bi-filetype-html
   color: purple
 
+- id: gfx
+  title: GFX
+  icon: bi bi-fire
+  color: purple
+
+- id: sfx
+  title: SFX
+  icon: bi bi-music-note-beamed
+  color: purple
+
+- id: fonts
+  title: Fonts
+  icon: bi bi-fonts
+  color: purple
+
+- id: modules
+  title: Modules
+  icon: bi bi-collection
+  color: purple
+
 - id: about
   title: About
   icon: bi bi-globe
