--- a/docs/package.json
+++ b/docs/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start" : "jekyll s --watch --livereload",
-    "startIncremental" : "jekyll s --watch --livereload --incremental"
+    "start" : "jekyll s --watch --livereload --host=0.0.0.0 --port=4000",
+    "startIncremental" : "jekyll s --watch --livereload --incremental --host=0.0.0.0 --port=4000"
   }
 }
