--- a/docs/package.json
+++ b/docs/package.json
@@ -1,6 +1,8 @@
 {
   "scripts": {
     "start" : "jekyll s --watch --livereload --host=0.0.0.0 --port=4000",
-    "startIncremental" : "jekyll s --watch --livereload --incremental --host=0.0.0.0 --port=4000"
+    "startIncremental" : "jekyll s --watch --livereload --incremental --host=0.0.0.0 --port=4000",
+    "checkBrokenLinksNoBuild" : "npx broken-link-checker-local _site || true",
+    "checkBrokenLinks" : "jekyll b && npx broken-link-checker-local _site || true"
   }
 }
